# patrol-service/handler/patrol_server.go
@@ -17,6 +17,7 @@ const (
 type PatrolServer struct {
 	patrolpb.UnimplementedPatrolServiceServer
 	PatrolModel *data.PatrolModel
+	CrimeModel  *data.CrimeModel
 }
 
 func (s *PatrolServer) Init() {
@@ -30,6 +31,11 @@ func (s *PatrolServer) RegisterNewPatrol(ctx context.Context, req *patrolpb.Patr
 		return nil, err
 	}
 	id, err := s.PatrolModel.Repo.InsertPatrol(patrol)
+	if err != nil {
+		return nil, err
+	}
+
+	err = s.PatrolModel.Repo.UpdateUserRole(id, "PATROL")
 	if err != nil {
 		return nil, err
 	}
@@ -109,11 +115,33 @@ func (s *PatrolServer) UpdatePatrolLocation(ctx context.Context, req *patrolpb.U
 }
 
 func (s *PatrolServer) AssignPatrolToCrime(ctx context.Context, req *patrolpb.AssignPatrolToCrimeRequest) (*patrolpb.AssignPatrolToCrimeResponse, error) {
-	panic("not implemented")
+	patrolId := req.PatrolId
+	crimeId := req.CrimeId
+
+	log.Printf("Assigning patrol to crime: %s, %s", patrolId, crimeId)
+
+	// Update status of patrol, conditioning with status as available
+	err := s.PatrolModel.Repo.UpdatePatrolStatus(patrolId, "BUSY", ptr.Of("AVAILABLE"))
+	if err != nil {
+		return nil, err
+	}
+
+	// Update crime status and patrolid in table crime
+	err = s.CrimeModel.Repo.UpdateCrimePatrolIDStatus(crimeId, patrolId, "ASSIGNED")
+	if err != nil {
+		return nil, err
+	}
+
+	return &patrolpb.AssignPatrolToCrimeResponse{
+		PatrolId: patrolId,
+		CrimeId:  crimeId,
+		Success:  true,
+		Message:  ptr.Of("successfully assigned patrol to crime"),
+	}, nil
 }
 
 func (s *PatrolServer) UpdatePatrolStatus(ctx context.Context, req *patrolpb.UpdatePatrolStatusRequest) (*patrolpb.UpdatePatrolStatusResponse, error) {
-	err := s.PatrolModel.Repo.UpdatePatrolStatus(req.PatrolId, req.Status.String())
+	err := s.PatrolModel.Repo.UpdatePatrolStatus(req.PatrolId, req.Status.String(), nil)
 	if err != nil {
 		return nil, err
 	}
